--- a/frontend/views/labels/_labels_bulk_action_templates.html.erb
+++ b/frontend/views/labels/_labels_bulk_action_templates.html.erb
@@ -98,11 +98,12 @@
             </select>
           </div>
         </div>
-
+        <input type="hidden" name="csv" id="csv" value="false"/>
         <div id="labels_to_print"></div>
     </div>
     <div class="modal-footer">
         <button type="submit" class="btn btn-default"><%= I18n.t("top_container_labels._frontend.bulk_operations.print_n_labels", {:n => "${selection.length}"}) %></button>
+        <button type="submit" class="btn btn-default" onClick="exportCSV()"><%= I18n.t("top_container_labels._frontend.bulk_operations.cvs_n_labels", {:n => "${selection.length}"}) %></button>
         <button class="btn btn-cancel btn-default" data-dismiss="modal"><%= I18n.t("actions.cancel") %></button>
     </div>
     <style type="text/css">
