--- a/frontend/views/labels/_labels_bulk_action_templates.html.erb
+++ b/frontend/views/labels/_labels_bulk_action_templates.html.erb
@@ -120,7 +120,9 @@
     </div>
     <div class="modal-footer">
         <button type="submit" class="btn btn-default" onClick="printLabels()"><%= I18n.t("top_container_labels._frontend.bulk_operations.print_n_labels", {:n => "${selection.length}"}) %></button>
+        <% if AppConfig.has_key?(:container_management_labels_csv) && AppConfig[:container_management_labels_csv] %>
         <button type="submit" class="btn btn-default" onClick="exportCSV()"><%= I18n.t("top_container_labels._frontend.bulk_operations.cvs_n_labels", {:n => "${selection.length}"}) %></button>
+        <% end %>
         <button class="btn btn-cancel btn-default" data-dismiss="modal"><%= I18n.t("actions.cancel") %></button>
     </div>
     <style type="text/css">
