--- a/frontend/views/labels/_bulk_action_labels.html.erb
+++ b/frontend/views/labels/_bulk_action_labels.html.erb
@@ -3,6 +3,7 @@
     <title><%= I18n.t("top_container_labels._frontend.bulk_operations.label_page_title") %></title>
     <link href="<%= "#{AppConfig[:frontend_proxy_prefix]}assets/container_labels_reset.css" %>" media="all" rel="stylesheet" type="text/css"/>
     <link href="<%= "#{AppConfig[:frontend_proxy_prefix]}assets/container_labels.css" %>" media="all" rel="stylesheet" type="text/css"/>
+    <link href="<%= "#{AppConfig[:frontend_proxy_prefix]}assets/yale-styles.css" %>" media="all" rel="stylesheet" type="text/css"/>
     <script src="<%= "#{AppConfig[:frontend_proxy_prefix]}assets/jquery.js?body=1" %>" type="text/javascript"></script>
     <script src="<%= "#{AppConfig[:frontend_proxy_prefix]}assets/jquery-barcode.min.js" %>" type="text/javascript"></script>
     <script src="<%= "#{AppConfig[:frontend_proxy_prefix]}assets/container_labels.js" %>" type="text/javascript"></script>
